fix (app.component.scss) train legend text fixed on firefox

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,7 +51,6 @@ body::-webkit-scrollbar {
 .grouper_jobs, .grouper_projects, .grouper_volunteers {
   font-family: 'Font Awesome 5 Free';
   text-anchor: middle;
-  alignment-baseline: middle;
 }
 
 .personal_project_color {
@@ -212,7 +211,7 @@ circle.selected {
   font-weight: 900;
   color: black;
   text-anchor: middle;
-  alignment-baseline: middle;
+  dominant-baseline: middle;
   pointer-events: none;
 }
 
